--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@ function getScript(src, callback) {
 }
 getScript('//api.adinplay.com/libs/aiptag/pub/AGV/agar.live/tag.min.js', initAipPreroll);
 	</script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BLJXFY0RXX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BLJXFY0RXX');
+</script><!--  -->
+
 </head>
 <body>
 <div id="nn"></div>
