--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ getScript('//api.adinplay.com/libs/aiptag/pub/AGV/agar.live/tag.min.js', initAip
 <select class="mlacpa-server-select" id="gamemode" onchange="if (!window.__cfRLUnblockHandlers) return false; setserver();" data-cf-modified-4584b754a552bbac87934f4d-="">
 <option maxlength="15" value="ffa1.agariodns.cyou" data-itr="FFA1">FFA 1 - EU</option>
 <option maxlength="15" value="ffa2.agariodns.cyou" data-itr="FFA2">FFA 2 - USA</option>
-<option maxlength="15" value="ffa3.agariodns.cyou" data-itr="FFA3">guest</option>
+<option maxlength="15" value="ffa3.agariodns.cyou" data-itr="guest">guest</option>
 <option maxlength="15" value="ffa44.agariodns.cyou" data-itr="FFA4">FFA 4 - EU</option>
 <option maxlength="15" value="pop1.agariodns.cyou" data-itr="FFA71">VIRUS BOMB 1 - EU</option>
 <option maxlength="15" value="pop2.agariodns.cyou" data-itr="FFA72">VIRUS BOMB 2 - EU</option>
